2005-03-13  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/db.c: Switch to mysql_use_result().  Add more memory related paramaters to embedded MySQL.
	* src/mainwindow.c: Rename a few map related functions.  Fix mousewheel zoomin/zoomout.  Keep statusbar lat/lon updated when dragging/scrolling.  Slow down scrolling slightly.
	* src/searchwindow.c:
	* src/gotowindow.c: Use new mainwindow function names.
	* src/importwindow.c: Move GTK_PROCESS_MAINLOOP macro to src/util.h.
	* src/layers.c: Add dash settings using integer in addition to floating point (for GDK).
	* src/map_draw_*: Use new dash settings.

2005-03-13  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map.c: Remove debugging message.

2005-03-13  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/layers.c: Add warning for bad color strings in layers.xml file.
	* src/map.c: Read map in fixed-location tiles to take advantage of MySQL query caching.
	* src/db.c: Enable query cache in embedded MySQL server.
	* src/map_draw_cairo.c: Allowing drawing of more road labels by permitting label to go over end of road slightly (scenemanager still prevents overlapping with other labels).

2005-03-13  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/point.c:
	* src/track.c:
	* src/location.c:
	* src/locationset.c:
	* src/pointstring.c: Change name of chunk allocators (just the text name used for debugging).
	* src/pointstring.c: Pass TRUE to g_ptr_array_free to free array memory.  Properly free pointstring name.
	* src/import_tiger.c: Pass TRUE to g_ptr_array_free to free array memory.
	* src/map.c: Add assertion that cleanup behaves as expected.

2005-03-10  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map.c: Commented out scenemanager demo (rectangle).

2005-03-09  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>
