@@ -79,9 +79,9 @@ zoomlevel_t g_sZoomLevels[NUM_ZOOMLEVELS+1] = {
 	{  400000, ""},		// 3
 	{  200000, ""},		// 4
 	{  100000, ""},		// 5
-	{   40000, ""},		// 6
-	{   20000, ""}, 	// 7
 
+	{   35000, ""},		// 6
+	{   20000, ""}, 	// 7
 	{   10000, ""},		// 8
 	{    4000, ""},		// 9
 	{    1800, ""},		// 10
